src/test/deca/context/valid/def_affect/cast-float-int1.deca
// Description:
//    Cast valide.
//
// Resultats:
//    a = 2

{
    int a = (int) (2.5);
}