src/test/deca/context/invalid/print/printx-null.deca
// Description:
//    Test print null.
//
// Resultats:
//    ok

{
    printx(null);
}